[gd_scene load_steps=23 format=3 uid="uid://bhujlbkfoc4h5"]

[ext_resource type="Script" path="res://encounters/verity/level_spaces/team_dissection/team_dissection.gd" id="1_hqie8"]
[ext_resource type="PackedScene" uid="uid://dgj8cvuy4impl" path="res://systems/core/components/shape_spawner/shape_spawner.tscn" id="2_3klrl"]
[ext_resource type="Script" path="res://encounters/verity/level_spaces/level_geometry.gd" id="2_lqv5j"]
[ext_resource type="PackedScene" uid="uid://dd0ruri7sfqku" path="res://encounters/verity/statues/statue_3d/statue_3d.tscn" id="4_0he2e"]
[ext_resource type="Script" path="res://systems/core/components/interaction/requirements/statue_3d_requirements/statue_3d_requirement.gd" id="5_talw2"]
[ext_resource type="PackedScene" uid="uid://ctkb27qfadydf" path="res://encounters/verity/statues/statue_ghost/statue_ghost.tscn" id="6_6alg0"]
[ext_resource type="Script" path="res://systems/core/components/interaction/requirements/statue_ghost_requirements/statue_ghost_requirement.gd" id="7_2r0am"]

[sub_resource type="Resource" id="Resource_2lic5"]
resource_local_to_scene = true
script = ExtResource("5_talw2")

[sub_resource type="Resource" id="Resource_xblgj"]
resource_local_to_scene = true
script = ExtResource("5_talw2")

[sub_resource type="Resource" id="Resource_v1au2"]
resource_local_to_scene = true
script = ExtResource("5_talw2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mss3n"]
albedo_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="QuadMesh" id="QuadMesh_g0666"]
size = Vector2(65.94, 46.22)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_po1q6"]
albedo_color = Color(0.419813, 0.419813, 0.419813, 1)

[sub_resource type="QuadMesh" id="QuadMesh_t0slg"]
size = Vector2(85.125, 46.22)

[sub_resource type="QuadMesh" id="QuadMesh_yiwpm"]
lightmap_size_hint = Vector2i(327, 420)
add_uv2 = true
size = Vector2(65.025, 83.76)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8bpgr"]
shading_mode = 2
emission_enabled = true
emission = Color(0.194535, 0.209007, 0.241045, 1)
emission_energy_multiplier = 1.83

[sub_resource type="Resource" id="Resource_t0lpa"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[sub_resource type="Resource" id="Resource_i0t33"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[sub_resource type="Resource" id="Resource_40kjm"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[sub_resource type="Resource" id="Resource_pfpjc"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[sub_resource type="Resource" id="Resource_b0hfu"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[sub_resource type="Resource" id="Resource_5l6vi"]
resource_local_to_scene = true
script = ExtResource("7_2r0am")

[node name="TeamDissection" type="Node3D"]
script = ExtResource("1_hqie8")

[node name="ShapeSpawner" parent="." instance=ExtResource("2_3klrl")]
unique_name_in_owner = true

[node name="LevelGeometry" type="Node3D" parent="."]
script = ExtResource("2_lqv5j")

[node name="Spawns" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50357, 35.8208)

[node name="Players" type="Node3D" parent="LevelGeometry/Spawns"]

[node name="PlayerOneSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.64088, 0, 0.509773)

[node name="PlayerTwoSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.69159, 0, 0.613155)

[node name="PlayerThreeSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.25724, 0, 2.38103)

[node name="PlayerFourSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.81515, 0, 3.6505)

[node name="PlayerFiveSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10194, 0, 3.78082)

[node name="PlayerSixSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Players"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.88463, 0, 2.28737)

[node name="Shapes" type="Node3D" parent="LevelGeometry/Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.279, -47.021)

[node name="LeftShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Shapes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5198, 1.17274, -22.6136)

[node name="CenterShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Shapes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.591082, 4.66517, -6.67706)

[node name="RightShapeSpawn" type="Marker3D" parent="LevelGeometry/Spawns/Shapes"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7559, 1.17274, -22.6136)

[node name="Statues" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -26.636)

[node name="LeftStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_0he2e")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.405, 0.243139, 1.74767)
interaction_behavior = SubResource("Resource_2lic5")

[node name="CenterStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_0he2e")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0543628, 0.243141, 15.7204)
interaction_behavior = SubResource("Resource_xblgj")

[node name="RightStatue" parent="LevelGeometry/Statues" instance=ExtResource("4_0he2e")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.2741, 0.243141, 1.77507)
interaction_behavior = SubResource("Resource_v1au2")

[node name="LevelBox" type="Node3D" parent="LevelGeometry"]

[node name="Floor" type="CSGBox3D" parent="LevelGeometry/LevelBox"]
use_collision = true
size = Vector3(63.4383, 0.512695, 83.4775)
material = SubResource("StandardMaterial3D_mss3n")

[node name="BackWall" type="CSGMesh3D" parent="LevelGeometry/LevelBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.1755, 41.6325)
visible = false
use_collision = true
flip_faces = true
mesh = SubResource("QuadMesh_g0666")
material = SubResource("StandardMaterial3D_po1q6")

[node name="FrontWall" type="CSGMesh3D" parent="LevelGeometry/LevelBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22.1755, -41.4533)
visible = false
use_collision = true
mesh = SubResource("QuadMesh_g0666")
material = SubResource("StandardMaterial3D_po1q6")

[node name="LeftWall" type="CSGMesh3D" parent="LevelGeometry/LevelBox"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -31.6463, 22.176, 0)
visible = false
use_collision = true
mesh = SubResource("QuadMesh_t0slg")
material = SubResource("StandardMaterial3D_po1q6")

[node name="RightWall" type="CSGMesh3D" parent="LevelGeometry/LevelBox"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 31.5534, 22.176, 0)
visible = false
use_collision = true
flip_faces = true
mesh = SubResource("QuadMesh_t0slg")
material = SubResource("StandardMaterial3D_po1q6")

[node name="Ceiling" type="CSGMesh3D" parent="LevelGeometry/LevelBox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 44.679, 0)
visible = false
use_collision = true
flip_faces = true
mesh = SubResource("QuadMesh_yiwpm")
material = SubResource("StandardMaterial3D_8bpgr")

[node name="FrontStatues" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 16.7897)

[node name="PlayerOneStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.267995, 0, 0.96342, 0, 1, 0, -0.96342, 0, 0.267995, -16.6816, 0.243139, 18.0398)
interaction_behavior = SubResource("Resource_t0lpa")

[node name="PlayerTwoStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.267995, 0, 0.96342, 0, 1, 0, -0.96342, 0, 0.267995, -13.3167, 0.243139, 11.1036)
interaction_behavior = SubResource("Resource_i0t33")

[node name="PlayerThreeStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.989, 0, 0.147913, 0, 1, 0, -0.147913, 0, 0.989, -5.38512, 0.243139, 7.1881)
interaction_behavior = SubResource("Resource_40kjm")

[node name="PlayerFourStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.987175, 0, -0.15964, 0, 1, 0, 0.15964, 0, 0.987175, 5.61655, 0.243139, 7.85655)
interaction_behavior = SubResource("Resource_pfpjc")

[node name="PlayerFiveStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.548921, 0, -0.835874, 0, 1, 0, 0.835874, 0, 0.548921, 13.2401, 0.243139, 11.3057)
interaction_behavior = SubResource("Resource_b0hfu")

[node name="PlayerSixStatue" parent="LevelGeometry/FrontStatues" instance=ExtResource("6_6alg0")]
unique_name_in_owner = true
transform = Transform3D(0.142543, 0, -0.989789, 0, 1, 0, 0.989789, 0, 0.142543, 16.7248, 0.243139, 18.1872)
interaction_behavior = SubResource("Resource_5l6vi")

[node name="CenterStructure" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.54346)

[node name="CSGTorus3D" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.70668, 0)
use_collision = true
inner_radius = 2.21104
outer_radius = 3.227

[node name="CSGTorus3D2" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.63944, 0)
use_collision = true
inner_radius = 2.84024
outer_radius = 3.74426

[node name="CSGTorus3D3" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.2984, 0)
use_collision = true
inner_radius = 3.25201
outer_radius = 4.00968

[node name="CSGTorus3D4" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.97907, 0)
use_collision = true
inner_radius = 4.26277
outer_radius = 5.29813

[node name="CSGTorus3D5" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.93486, 0)
use_collision = true
inner_radius = 6.23936
outer_radius = 7.08327

[node name="CSGTorus3D6" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.9297, 0)
use_collision = true
inner_radius = 7.93587
outer_radius = 8.90789

[node name="CSGTorus3D7" type="CSGTorus3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.2268, 0)
use_collision = true
inner_radius = 10.3875
outer_radius = 11.9583

[node name="CSGSphere3D" type="CSGSphere3D" parent="LevelGeometry/CenterStructure"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 14.4475, 0)
use_collision = true
radius = 6.64343

[node name="BackArea" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15.6734)

[node name="RaisedFloor" type="Node3D" parent="LevelGeometry/BackArea"]

[node name="MiddleRaised" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0658741, 1.85222, -6.48137)
use_collision = true
size = Vector3(16.6663, 3.20511, 17.4072)

[node name="LeftStairs" type="CSGPolygon3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, -1, -8.3947, 0.22525, -7.59281)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 3.23, 8.889, 0)
depth = 8.77

[node name="RightStairs" type="CSGPolygon3D" parent="LevelGeometry/BackArea/RaisedFloor"]
transform = Transform3D(1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, 1, 8.26661, 0.22525, 1.4968)
use_collision = true
polygon = PackedVector2Array(0, 0, 0, 3.229, 8.889, 0)
depth = 8.77

[node name="Obstacles" type="Node3D" parent="LevelGeometry/BackArea/RaisedFloor"]

[node name="FrontLeftHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.62353, 5.72378, 1.77001)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="FrontRightHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.42397, 5.72378, 1.78555)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="CenterBlock" type="CSGCylinder3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.245819, 4.4371, -6.61333)
use_collision = true
radius = 2.57066
height = 5.08017

[node name="BackRightTallBlock" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.99518, 4.31243, -9.13799)
use_collision = true
size = Vector3(3.61316, 8.34395, 4.23856)

[node name="BackLeftTallBlock" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.75284, 4.31243, -9.13799)
use_collision = true
size = Vector3(3.61316, 8.34395, 4.23856)

[node name="BackLeftHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.68841, 5.74596, -14.6666)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="BackRightHalfWall" type="CSGBox3D" parent="LevelGeometry/BackArea/RaisedFloor/Obstacles"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.27182, 5.74596, -14.6666)
use_collision = true
size = Vector3(3.57703, 4.5816, 0.867676)

[node name="LeftRaisedAlcove" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.7577, 0, 11.6483)

[node name="Platform" type="CSGBox3D" parent="LevelGeometry/LeftRaisedAlcove"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6781, 4.46686, -8.61572)
use_collision = true
size = Vector3(7.13013, 9.93372, 35.0264)

[node name="Connector" type="CSGBox3D" parent="LevelGeometry/LeftRaisedAlcove"]
transform = Transform3D(0.591056, 0, 0.80663, 0, 1, 0, -0.80663, 0, 0.591056, 1.93315, 9.26211, 9.3994)
use_collision = true
size = Vector3(7.09033, 0.322266, 7.92383)

[node name="Ramp" type="CSGBox3D" parent="LevelGeometry/LeftRaisedAlcove"]
transform = Transform3D(0.590606, 0.427624, 0.684341, 0, 0.848048, -0.529919, -0.80696, 0.312973, 0.500862, 11.132, 4.67, 15.848)
use_collision = true
size = Vector3(5.83081, 0.368652, 17.3793)

[node name="RightRaisedAlcove" type="Node3D" parent="LevelGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.6981, 0, 11.648)

[node name="Platform" type="CSGBox3D" parent="LevelGeometry/RightRaisedAlcove"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.678, 4.467, -8.616)
use_collision = true
size = Vector3(7.13013, 9.93372, 35.0264)

[node name="Connector" type="CSGBox3D" parent="LevelGeometry/RightRaisedAlcove"]
transform = Transform3D(0.590606, 0, -0.80696, 0, 1, 0, 0.80696, 0, 0.590606, -1.933, 9.262, 9.399)
use_collision = true
size = Vector3(7.09033, 0.322266, 7.92383)

[node name="Ramp" type="CSGBox3D" parent="LevelGeometry/RightRaisedAlcove"]
transform = Transform3D(0.590606, -0.427624, -0.684341, 0, 0.848048, -0.529919, 0.80696, 0.312973, 0.500862, -11.132, 4.67, 15.848)
use_collision = true
size = Vector3(5.83081, 0.368652, 17.3793)
